- Fixed bug #26640 (__autoload() not invoked by Reflection classes)

# Also removed double call of reflection_register_implement() on
# reflection_extension_ptr.
# Fixed also case-insensitive lookup of property names,
# now Reflection_Property('Classname', 'FooBar'); works too.


git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@148894 c90b9560-bf6c-de11-be94-00142212c4b1